--- a/src/app/layout/vertical/layout-1/layout-1.component.scss
+++ b/src/app/layout/vertical/layout-1/layout-1.component.scss
@@ -45,7 +45,9 @@ vertical-layout-1 {
 
                     // Content component
                     content {
-
+                      &.ar{
+                          direction: rtl;
+                      }
                         &.inner-scroll {
                             flex: 1 1 0%;
                             min-height: 0;
